# typedpath

./: README.md  TODO.txt  compreq.sh  example.py  pyproject.toml  requirements.py  set_version.py
.github/workflows/: compreq.yml  test_release.yml
tests/: test_args.py  test_base.py  test_bytes.py  test_dict.py  test_init.py  test_inspect.py  test_json.py  test_keycodec.py  test_numpy.py  test_pandas.py  test_pickle.py  test_struct.py  test_text.py  utils.py
typedpath/: __init__.py  args.py  base.py  bytes.py  dict.py  inspect.py  json.py  key_codec.py  keycodec.py  numpy.py  pandas.py  pickle.py  struct.py  text.py
